--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
             <img src="logo.png" alt="NUTTYDex Logo" class="hero-logo">
             <h1>NUTTYDex</h1>
             <p class="hero-subtitle">
-                Next-generation decentralized perpetual exchange combining professional trading infrastructure with innovative tokenomics, creating sustainable value through genuine trading activity.
+                Decentralized perpetual exchange combining professional trading infrastructure with innovative tokenomics, creating sustainable value through genuine trading activity.
             </p>
         </div>
         
@@ -627,7 +627,7 @@
             <div class="section">
                 <h2>Executive Summary</h2>
                 <p style="font-size: 1.1em; line-height: 1.8;">
-                    NUTTYDex, with its native token NUTTY, is a next-generation decentralized perpetual exchange that combines professional trading infrastructure with innovative tokenomics, creating sustainable value through genuine trading activity rather than gimmicks. By integrating with the PNUT ecosystem, yet maintaining independence, NUTTY creates a unique value proposition in the DEX landscape.
+                    NUTTYDex, with its native token NUTTY, is a decentralized perpetual exchange that combines professional trading infrastructure with innovative tokenomics, creating sustainable value through genuine trading activity rather than gimmicks. By integrating with the PNUT ecosystem, yet maintaining independence, NUTTY creates a unique value proposition in the DEX landscape.
                 </p>
                 
                 <div class="stats-grid">
